--- a/landing.html
+++ b/landing.html
@@ -11,6 +11,10 @@
 </head>
 <body>
 
+  <audio id="bgm" autoplay loop>
+    <source src="Asset/ATEEZ (에이티즈) - Ice On My Teeth (Bardcore  Medieval Kpop).mp3" type="audio/mp3">
+  </audio>
+  
    <!-- NAVBAR -->
   <div id="navbar-container"></div>
 
